--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,17 @@
-body {
-  margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
-}
+@import url('https://fonts.googleapis.com/css2?family=ABeeZee&family=Aclonica&family=DM+Sans:opsz@9..40&family=Gothic+A1&family=Inter&family=Libre+Franklin&family=Montserrat&family=Plus+Jakarta+Sans&family=Poppins&family=Preahvihear&family=Raleway&family=Roboto&family=Rubik&family=Syne&family=Varela+Round&display=swap');
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+*{
+  margin: 0px;
+  padding: 0px;
+}
+body{
+  font-family: Syne;
+  background-color: var(--black);
+  color: var(--white);
+  
+}
+:root {
+  --blue: #1e90ff;
+  --white: #ffffff;
+  --black:#232B2B;
 }
